<resources>
    <string name="app_name">PathSocial</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Create</string>
    <string name="title_notifications">Settings</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et velit at ante elementum scelerisque. Fusce feugiat augue dui, et scelerisque metus finibus non. Pellentesque ultricies porttitor ullamcorper. Vivamus vulputate tortor lectus, in ornare eros varius et. Proin egestas et risus eu interdum. Ut imperdiet enim dictum libero elementum, ut ornare nisi euismod. Praesent ex lacus, aliquam sed leo eu, varius tincidunt ipsum. Morbi mattis purus nec tortor vestibulum, ullamcorper sollicitudin massa pharetra. Phasellus non dictum metus, vitae fermentum tellus.

Aenean faucibus molestie ex. Etiam lorem ligula, placerat et faucibus faucibus, dapibus a magna. In nisl neque, porta quis varius a, auctor at enim. Phasellus vulputate luctus porta. Donec eu libero eu magna faucibus interdum. Etiam sodales, ipsum at egestas condimentum, purus ligula mattis felis, vel commodo magna mi id purus. Proin sagittis orci est, vel fermentum urna porta eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas elementum dui velit, non rutrum erat rhoncus vel. Donec dignissim mattis purus id feugiat. Suspendisse ornare felis eget quam lobortis gravida. Cras varius eu eros at venenatis.

Suspendisse in ipsum dapibus, sagittis justo eget, auctor tellus. Nam sed lorem odio. Morbi placerat tortor rhoncus sem interdum ultrices. Donec viverra quam in nisl tincidunt, at molestie dui gravida. Sed ac quam libero. Proin ac dolor in eros posuere sagittis. Donec elementum egestas leo eu aliquet. Aliquam quam quam, fermentum molestie sem a, tincidunt eleifend neque. Suspendisse sagittis convallis malesuada. Vivamus eu convallis tellus. Vestibulum finibus aliquet lorem, nec vestibulum lectus lacinia a. Cras commodo iaculis molestie. Maecenas in interdum erat. Proin ut mauris quis augue consequat venenatis. Morbi scelerisque luctus fringilla. Vivamus aliquet eros quis ante dignissim auctor.

</string>
    <string name="follow_show_statistics">Statistics</string>
    <string name="follow_start_trail">START TRAIL</string>
    <string name="follow_resume">Resume</string>
    <string name="follow_pause">Pause</string>
    <string name="follow_end">End</string>
    <string name="follow_finish_activity">Finish activity</string>
    <string name="follow_continue_following">Continue following</string>
    <string name="league_user_name">User Name</string>
    <string name="login_email">E mail</string>
    <string name="login_password">Password</string>
    <string name="login_bt_text">LOG IN</string>
    <string name="login_no_acc">I don\'t have an account!</string>
    <string name="main_title">Welcome</string>
    <string name="main_no_acc">No account yet? Register!</string>
    <string name="main_login">Login now</string>
    <string name="map_search">Search here</string>
    <string name="my_trail_title">My trails</string>
    <string name="record_bt_statistics">Statistics</string>
    <string name="record_start">START RECORDING</string>
    <string name="record_resume">Resume</string>
    <string name="record_pause">Pause</string>
    <string name="record_end">End</string>
    <string name="record_save">Save path</string>
    <string name="record_continue">Continue recording</string>
    <string name="record_delete">Delete Path</string>
    <string name="register_username_hint">E mail</string>
    <string name="register_fld_name">Name</string>
    <string name="register_fld_last_name">Last name</string>
    <string name="register_fld_height">Height</string>
    <string name="register_fld_weight">Weight</string>
    <string name="register_fld_password">Password</string>
    <string name="register_bt_sign_up">SIGN UP</string>
    <string name="register_bt_have_acc">I have an account!</string>
    <string name="register_height_metric">Metric</string>
    <string name="register_weight_metric">Metric</string>
    <string name="register_weight_unit">unit</string>
    <string name="register_height_unit">unit</string>
    <string name="userpage_title">Account Settings</string>
    <string name="userpage_fld_name">Name</string>
    <string name="userpage_fld_email_val">Email</string>
    <string name="userpage_fld_email">Email:</string>
    <string name="userpage_fld_height_val">Height</string>
    <string name="userpage_fld_height">Height:</string>
    <string name="userpage_fld_weight_val">Weight</string>
    <string name="userpage_fld_weight">Weight:</string>
    <string name="userpage_bt_steps">Steps</string>
    <string name="userpage_bt_calories">Calories</string>
    <string name="userpage_step_total_val">0</string>
    <string name="userpage_step_total">Total</string>
    <string name="userpage_step_year_val">0</string>
    <string name="userpage_step_year">Year</string>
    <string name="userpage_step_month_val">0</string>
    <string name="userpage_step_month">Month</string>
    <string name="userpage_step_day_val">0</string>
    <string name="userpage_step_day">Day</string>
    <string name="userpage_cal_total_val">0</string>
    <string name="userpage_cal_total">Total</string>
    <string name="userpage_cal_year_val">0</string>
    <string name="userpage_cal_year">Year</string>
    <string name="userpage_cal_month_val">0</string>
    <string name="userpage_cal_month">Month</string>
    <string name="userpage_cal_day_val">0</string>
    <string name="userpage_cal_day">Day</string>
    <string name="regtrail_bt_save">Save recording</string>
    <string name="regtrail_fld_name">Name</string>
    <string name="regtrail_fld_description">Description</string>
    <string name="trailinfo_bt_delete">Delete trail</string>
    <string name="trailinfo_fld_name">Name of trail</string>
    <string name="trailinfo_fld_date_created">Date created</string>
    <string name="trailinfo_fld_date_val">TextView</string>
    <string name="trailinfo_fld_dist_val">TextView</string>
    <string name="trailinfo_fld_steps">Steps</string>
    <string name="trailinfo_fld_steps_val">TextView</string>
    <string name="trailinfo_fld_speed_val">TextView</string>
    <string name="trailinfo_fld_cal_val">TextView</string>
    <string name="trailinfo_fld_duration_val">TextView</string>
    <string name="trailinfo_fld_weather_val">TextView</string>
    <string name="trailinfo_fld_cal">Calories</string>
    <string name="trailinfo_fld_speed">Median speed</string>
    <string name="trailinfo_fld_duration">Duration</string>
    <string name="trailinfo_fld_weather">Weather</string>
    <string name="trailinfo_bt_publish">Publish</string>
    <string name="trailinfo_bt_follow">Follow trail</string>
    <string name="trailinfo_fld_cal_expected">Expected calories</string>
    <string name="trailinfo_fld_user">User</string>
    <string name="trailinfo_fld_user_val">TextView</string>
    <string name="gender_f">Female body type</string>
    <string name="gender_m">Male body type</string>
    <string name="user_paths">Created by </string>
    <string name="user_paths_map_btn">Map View</string>
    <string name="go_back_btn">Go back</string>
    <string name="user_paths_list_btn">List View</string>
</resources>